{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 60,
  "lineage": "4a613cb0-39ff-4860-96f3-16940620dd24",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sneha_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871826697330:internet-gateway/igw-0f5855783a40060e1",
            "id": "igw-0f5855783a40060e1",
            "owner_id": "871826697330",
            "region": "us-east-1",
            "tags": {
              "Name": "sneha-igw"
            },
            "tags_all": {
              "Name": "sneha-igw"
            },
            "vpc_id": "vpc-014e073cc8cc75682"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.sneha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sneha_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871826697330:route-table/rtb-0f872cabf22fc3e3c",
            "id": "rtb-0f872cabf22fc3e3c",
            "owner_id": "871826697330",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5855783a40060e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sneha-route-table"
            },
            "tags_all": {
              "Name": "sneha-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-014e073cc8cc75682"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "871826697330",
            "id": "rtb-0f872cabf22fc3e3c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.sneha_igw",
            "aws_vpc.sneha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sneha_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b7adf0b5c8c0288",
            "region": "us-east-1",
            "route_table_id": "rtb-0f872cabf22fc3e3c",
            "subnet_id": "subnet-03d25644b1d23e847"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sneha_igw",
            "aws_route_table.sneha_route_table",
            "aws_subnet.sneha_subnet",
            "aws_vpc.sneha_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aaa0cc181362225",
            "region": "us-east-1",
            "route_table_id": "rtb-0f872cabf22fc3e3c",
            "subnet_id": "subnet-0d428c6ab33e31486"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.sneha_igw",
            "aws_route_table.sneha_route_table",
            "aws_subnet.sneha_subnet",
            "aws_vpc.sneha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sneha_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871826697330:security-group/sg-04bf13b2888a906fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04bf13b2888a906fa",
            "ingress": [],
            "name": "terraform-20260313202141111300000001",
            "name_prefix": "terraform-",
            "owner_id": "871826697330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sneha-cluster-sg"
            },
            "tags_all": {
              "Name": "sneha-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014e073cc8cc75682"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "871826697330",
            "id": "sg-04bf13b2888a906fa",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sneha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sneha_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871826697330:security-group/sg-0d1029d545a03f0c7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1029d545a03f0c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20260313202141115400000002",
            "name_prefix": "terraform-",
            "owner_id": "871826697330",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sneha-node-sg"
            },
            "tags_all": {
              "Name": "sneha-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014e073cc8cc75682"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "871826697330",
            "id": "sg-0d1029d545a03f0c7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sneha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sneha_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871826697330:subnet/subnet-03d25644b1d23e847",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d25644b1d23e847",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "871826697330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sneha-subnet-0"
            },
            "tags_all": {
              "Name": "sneha-subnet-0"
            },
            "vpc_id": "vpc-014e073cc8cc75682"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "871826697330",
            "id": "subnet-03d25644b1d23e847",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sneha_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871826697330:subnet/subnet-0d428c6ab33e31486",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d428c6ab33e31486",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "871826697330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sneha-subnet-1"
            },
            "tags_all": {
              "Name": "sneha-subnet-1"
            },
            "vpc_id": "vpc-014e073cc8cc75682"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "871826697330",
            "id": "subnet-0d428c6ab33e31486",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.sneha_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sneha_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:871826697330:vpc/vpc-014e073cc8cc75682",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053b2d489d6acb26f",
            "default_route_table_id": "rtb-0589cdd50c1dfe18d",
            "default_security_group_id": "sg-063d75743695bada0",
            "dhcp_options_id": "dopt-0e43a9584115e7c33",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014e073cc8cc75682",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0589cdd50c1dfe18d",
            "owner_id": "871826697330",
            "region": "us-east-1",
            "tags": {
              "Name": "sneha-vpc"
            },
            "tags_all": {
              "Name": "sneha-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "871826697330",
            "id": "vpc-014e073cc8cc75682",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}